# CV-project

./: .gitignore  README.md  README_KR.md  active_interactions.json  app.py  concept_config.json  download_CUB-200-2011.py  download_milk10k.py  eval_cbm.py  eval_example.txt  generate_concept_config.py  main.py  pyproject.toml  requirements.txt  sanity_check_mlp.py  upperbound_attributes_only.py  upperbound_image_only.py  upperbound_multimodal.py
configs/: chexpert_train_config.yaml  cub_train_config.yaml  derm7pt_train_config.yaml  milk10k_train_config.yaml  train_config.yaml
scratch/: analyze_concepts.py  analyze_pairs.py  check_gradio_inference.py  concept_analysis.json  concept_analysis.md  convert_cub_attributes.py  debug_predictions.py  inspect_attn_forward.py  inspect_vit.py  prune_gates.py  refactor.py  sanity_check_nam.py  scan_dep.py  smart_stratified_sampling.py  test_chexpert.py  test_focal_loss.py  test_gradio_build.py  test_latent_losses.py  test_patch.py  test_yellow_warbler.py  visualize_nam.py
src/data/: base_dataset.py  chexpert.py  cub.py  derm7pt.py  generate_dataloader_prompt.md  milk10k.py
src/models/: cbm_factory.py  multi_head_cbm.py  xray_backbone.py
src/tti/: __init__.py  common.py  coop.py
src/utils/: concept_bias.py  helpers.py  losses.py  metrics.py  train_loops.py  visualization.py
wandb/: latest-run
wandb/run-20260530_000116-u69zoc3z/: run-u69zoc3z.wandb
wandb/run-20260530_000116-u69zoc3z/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260530_000212-q950gntq/: run-q950gntq.wandb
(+3 files in other folders)
