[project]
name = "cv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.17.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "open-clip-torch>=3.3.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "wandb>=0.27.0",
]
